# tun2socks

./: .gitignore  Dockerfile  Makefile  README.md  Vagrantfile  config.example.ini  dig.go  go.mod  go.sum  main.c  main.go  udp.go
cmd/: main.c  main.go
cmd/netstack/: main.go
cmd/shared/: CMakeLists.txt  main.c
cmd/smart/: parser.go
cmd/surge/: jsbox.go  parser.go
cmd/udp/: GitHub.html  client.go  server.go
configure/: config.go  proxies.go
dns/: cache.go  fake.go  ip_pool.go  ip_pool_test.go  pattern.go  pattern_test.go  rule.go  table.go  util.go
geoip/: README.md  geoip_test.go  query.go
gui/: main.go
netstack/: cidr.go  port.go  stack.go  tcp.go  udp.go
socket/: tunnel.go
socks5/: basic.go
tun2socks/: app.go  cidr.go  const.go  dns.go  pprof.go  signal_darwin.go  signal_linux.go  signal_windows.go  stack.go  tcp.go  tcp2socks.go  tun_darwin.go  tun_linux.go  tun_windows.go  udp.go  udp2socks5.go  var.go
tunnel/: socks5.go  tcp2socks.go  udp2socks5.go
util/: cmd.go  dns.go  io.go  ip.go  port.go  route.go  route_darwin.go  route_linux.go  route_windows.go  signal.go  tun_darwin.go  tun_linux.go  udp.go
